L04: Test GC